--- a/02_q&a_with_rag/requirements.txt
+++ b/02_q&a_with_rag/requirements.txt
@@ -20,6 +20,7 @@ idna==3.7
 jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.1.17
+langchain-chroma==0.1.0
 langchain-community==0.0.37
 langchain-core==0.1.52
 langchain-openai==0.1.6
